--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "script.js",
   "dependencies": {
-    "lax.js": "^2.0.3"
+    "lax.js": "^2.0.3",
+    "snapsvg": "^0.5.1"
   },
   "devDependencies": {},
   "scripts": {
